--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+body{
+  /* 先套用 Noto Sans TC 這個 思源黑體 */
+  font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
+}
+
 h1,h2,h3,h4,h5,h6,p,a{
 	color: #343A40;
 	/*text-decoration: none;*/
