--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+/*@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);*/
+@import url(notosanstc.css);
 body{
   /* 先套用 Noto Sans TC 這個 思源黑體 */
   font-family: 'Noto Sans TC', '微軟正黑體', sans-serif;
